contrast fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .App {
   background-color: #f4f3f0;
+  color: black;
 
   .wrapper_global {
     padding: clamp(1.25rem, 0.7437rem + 2.5316vw, 3.75rem) clamp(0.625rem, -1.6535rem + 11.3924vw, 11.875rem);
