--- a/src/sass/_styleGuide.scss
+++ b/src/sass/_styleGuide.scss
@@ -82,7 +82,8 @@ label {
 
 .p_bold {
 font-weight: 600;
-color: #9c9b98;
+font-style: italic;
+color: black;
 margin: 0%;
 padding: 0;
 }
